--- a/基础算法.md
+++ b/基础算法.md
@@ -4027,6 +4027,8 @@ int main()
 
 ### 28.树与图的BFS
 
+#### (1)例1：最短距离
+
 ![image-20231112153633951](https://keriyar-images.oss-cn-qingdao.aliyuncs.com/img/202311121536002.png)
 
 ```cpp
@@ -4085,6 +4087,81 @@ int main()
 	return 0;
 }
  
+```
+
+#### (2)例二：最短路计数
+
+[P1144 最短路计数 - 洛谷 | 计算机科学教育新生态 (luogu.com.cn)](https://www.luogu.com.cn/problem/P1144)
+
+<img src="https://keriyar-images.oss-cn-qingdao.aliyuncs.com/img/202311192336586.png" alt="image-20231119233609544" style="zoom:50%;" />
+
+```cpp
+#include<bits/stdc++.h>
+using namespace std;
+//由于是只找最短路径数所以不用求最短路径。
+//题目当中是边的wieght一致所以可以用BFS
+//在树当中，判断所求结点的深度，即可判断有几条路
+const int N=1000100;
+int n,m;
+int h[N],e[N],ne[N],idx;
+int d[N];
+bool visited[N];
+queue<int>q;
+int cnt[N],depth[N];
+
+void add(int a,int b)
+{
+	e[idx]=b,ne[idx]=h[a],h[a]=idx++;
+		
+}
+
+void bfs()
+{
+	q.push(1);
+	visited[1]=true;
+	cnt[1]=1;
+	depth[1]=0;
+	
+	while(q.size())
+	{
+		auto t =q.front();
+		q.pop();
+		
+		for(int i=h[t];i!=-1;i=ne[i])
+		{
+			int j=e[i];
+			if(!visited[j])
+			{
+				visited[j]=true;
+				depth[j]=depth[t]+1;
+                  //j的最小深度，最先被访问的jyi'di
+				q.push(j);
+			}
+			if(depth[j]==depth[t]+1)
+			{
+				cnt[j]=(cnt[t]+cnt[j])%100003;
+			}
+		}
+	}
+	for(int i=1;i<=n;i++)
+	{
+		cout<<cnt[i]<<endl;
+	}
+}
+
+int main()
+{
+	cin>>n>>m;
+	memset(h,-1,sizeof h);
+	for(int i=0;i<m;i++)
+	{
+		int a,b;
+		cin>>a>>b;
+		add(a,b);
+		add(b,a);
+	}
+	bfs();
+ } 
 ```
 
 ### 29.拓扑序列
@@ -4188,7 +4265,7 @@ int main()
 
 ​	(1)所有边的权重都是正数：
 
-​		①朴素Dijkstra算法，O($n^2$)，n是点的数量，适合稠密图(边数很多大于节点数,$m>nlogn$, m是$n^2$级别的)，用邻接矩阵来存
+​		①朴素Dijkstra算法，O($n^2$)，n是点的数量，适合稠密图(边数很多，远大于节点数,$m>n^2$, m是$n^2$级别的)，用邻接矩阵来存
 
 ​		②堆优化版的Dijkstra算法，O($m *\log{n}$),m是边的数量，适合稀疏图($m<nlogn$，m==n==$10^5$)，用邻接表来存
 
@@ -4202,7 +4279,7 @@ int main()
 
 2.多源汇最短路：起点和终点不唯一
 
-​	Floyd算法，O($n^3$)，是点的个数
+​	Floyd算法，O($n^3$)，是点的个数，不能有负权回路
 
 ![image-20231112172419848](https://keriyar-images.oss-cn-qingdao.aliyuncs.com/img/202311121724920.png)
 
@@ -4247,8 +4324,8 @@ int dijkstra()
 		}
 		//t最后求出来的是没有被访问过的距离最近的点
 		st[t]=true;
-		
-		for(int j=1;j<=n;j++)//用t更新其他点的距离
+		//t标记为被访问过
+		for(int j=1;j<=n;j++)//用t更新其他点到1号点的距离
 		{
 			dist[j]=min(dist[j],dist[t]+g[t][j]);
             //如果到j的距离比经过t再到j的距离大，那么更新一下
@@ -4608,3 +4685,684 @@ int main()
 
 
 ### 35.Floyd
+
+用邻接矩阵来存，基于动态规划，不能有负权回路
+
+<img src="https://keriyar-images.oss-cn-qingdao.aliyuncs.com/img/202311161916333.png" alt="image-20231116191604236" style="zoom:50%;" />
+
+```cpp
+#include<bits/stdc++.h>
+using namespace std;
+
+const int N=500,INF=1e9;
+int n,m,q;
+int d[N][N];
+
+void floyd()
+{
+	for(int k=1;k<=n;k++)
+	{
+		for(int i=1;i<=n;i++)
+		{
+			for(int j=1;j<=n;j++)
+			{
+				d[i][j]=min(d[i][j],d[i][k]+d[k][j]);
+			}
+		}
+	}
+}
+
+int main()
+{
+	cin>>n>>m>>q;
+	
+	for(int i=1;i<=n;i++)
+	{
+		for(int j=1;j<=n;j++)
+		{
+			if(i==j)
+			{
+				d[i][j]=0;
+			}
+			else
+			{
+				d[i][j]=INF;
+			}
+		}
+	}
+	
+	while(m--)
+	{
+		int a,b,c;
+		cin>>a>>b>>c;
+		d[a][b]=min(d[a][b],c);
+	}
+	floyd();
+	
+	while(q--)
+	{
+		int a,b;
+		cin>>a>>b;
+		if(d[a][b]>INF/2)
+		{
+			cout<<"impossible"<<endl;
+		}
+		else
+		{
+			cout<<d[a][b]<<endl;
+		}
+		
+	}
+	return 0;
+}
+```
+
+### 36.最小生成树
+
+最小生成树：就是对于一个有 n 个点的无向连通图的生成树，其包含原图中的所有点，且保持图连通的边权总和最少的边。
+
+简单来说就是对于一个有 n 个点的无向连通图的生成树，其包含原图中的所有点，且保持图连通的边权总和最少的边。
+
+<img src="https://keriyar-images.oss-cn-qingdao.aliyuncs.com/img/202311201832908.png" alt="img" style="zoom:67%;" />
+
+最小生成树具有以下两条性质：
+
+- 切割性质：连接点 x、y 的边权最小的边必定被生成树包含
+- 回路性质：任意回路/环上的边权最大的边必不被生成树包含
+
+1.Prim算法：
+
+​	(1)朴素版的Prim，O($n^2$)，适用于稠密图
+
+​	(2)堆优化版的Prim，O($mlogn$)，适用于稀疏图
+
+2.Kruskal算法：
+
+​	O($mlogm$)，适用于稀疏图
+
+稠密图一般用朴素Prim，稀疏图一般用Kruskal，堆优化的Prim不常用
+
+边的正负没有影响
+
+### 37.朴素版Prim
+
+朴素版prim和Dijkstra很相似
+
+思路：
+
+1. $dist[i]->+\infty$，所有点到集合的距离是正无穷
+
+2. 找到集合外距离最近的点t
+
+3. 用t去更新集合外的点到集合的距离
+
+4. 把t加到集合当中去
+
+> 注意：
+> 集合外的点到集合的距离是，集合外的点到集合内部的点的距离的最小值
+
+```cpp
+#include<bits/stdc++.h>
+using namespace std;
+
+const int N=5100,INF=0x3f3f3f3f;
+
+int g[N][N];
+int dist[N];
+bool st[N];
+int n,m;
+
+int prim()
+{
+	memset(dist,0x3f,sizeof dist);
+	dist[1]=0; 
+	int res=0;
+	for(int i=0;i<n;i++)//n次迭代 
+	{
+		int t=-1;
+		for(int j=1;j<=n;j++)
+		{
+			if(!st[j]&&(t==-1 || dist[t]>dist[j]))
+			{
+				t=j;
+			}
+		}
+		if(dist[t]==INF)return INF;//孤立点 
+		
+		
+		res+=dist[t];
+		
+		st[t]=true;
+		for(int j=1;j<=n;j++)
+		{
+			dist[j]=min(dist[j],g[t][j]);
+		}
+		 
+	}
+	return res;
+}
+
+int main()
+{
+	cin>>n>>m;
+	memset(g,0x3f,sizeof g);
+	while(m--)
+	{
+		int a,b,c;
+		cin>>a>>b>>c;
+		g[a][b]=g[b][a]=min(g[a][b],c);
+	}
+	int t =prim();
+	if(t==INF)
+	{
+		cout<<"i";
+	}
+	else
+	{
+		cout<<t;
+	}
+	return 0;
+}
+ 
+```
+
+
+
+### 38.Kruskal
+
+思路：
+
+将所有边按权重从小到大排序，依赖sort函数，所以其时间复杂度的上限就是sort的复杂度$mlogm$。
+
+枚举每一条边a，b，边权c，如果ab不连通，就将这条边加入到集合中
+
+用到了并查集的知识。
+
+<img src="https://keriyar-images.oss-cn-qingdao.aliyuncs.com/img/202311212134719.png" alt="image-20231121213454618" style="zoom:50%;" />
+
+```cpp
+#include<bits/stdc++.h>
+using namespace std;
+
+const int N=200100;
+int n,m;
+int p[N];//每个点的父节点
+int res;//最小生成树中的边权之和
+int cnt;//加了多少条边 
+struct Edge
+{
+	int a,b,w;
+	bool operator < (const Edge &W)const 
+	{
+		return w<W.w;
+	}//重载比较运算符
+}edges[N];
+
+int find(int x)
+{
+	if(p[x]!=x)
+	{
+		p[x]=find(p[x]);
+	}
+	return p[x];
+}
+int main()
+{
+	cin>>n>>m;
+	for(int i=0;i<m;i++)
+	{
+		int a,b,w;
+		cin>>a>>b>>w;
+		edges[i]={a,b,w};
+	}
+	sort(edges,edges+m);
+	//按照边权进行排序
+	for(int i=1;i<=n;i++)
+	{
+		p[i]=i;//每个点的根节点是自己
+	}
+	
+	for(int i=0;i<m;i++)
+	{
+		int a=edges[i].a,b=edges[i].b,w=edges[i].w;
+		a=find(a),b=find(b);//找a和b的父节点
+		if(a!=b)//a和b不在一个集合中
+		{
+			p[a]=b;//b成为a的父节点，合并a和b
+			res+=w;//权重和更新
+			cnt++;//边数++
+            //cout<<edges[i].a<<" "<<edges[i].b<<" "<<edges[i].w<<endl;
+            //这是在输出每一次选择的边
+		}
+	}
+	if(cnt < n-1)//如果遍历的边数不足n-1，说明有的点无法来连通
+	{
+		cout<<"impossible";
+	 } 
+	 else
+	 {
+	 	cout<<res;
+	 }
+	return 0;
+}
+ 
+```
+
+
+
+### 39.二分图
+
+概念：就是顶点集 V 可分割为两个互不相交的子集，且图中每条边依附的两个顶点都分属于这两个互不相交的子集，两个子集内的顶点不相邻。
+
+简单的说就是：它可以被划分为两个部分，每个部分内的点互不相连。
+
+当图中的顶点分为两个集合，使得第一个集合中的所有顶点都与第二个集合中的所有顶点相连时，此时是一特殊的二分图，称为完全二分图。
+
+<img src="https://keriyar-images.oss-cn-qingdao.aliyuncs.com/img/202311232006334.png" style="zoom:50%;" />
+
+1.染色法：O(m+n)
+
+2.匈牙利算法：O(mn)，一般来说实际运行时间远小于O(mn)
+
+### 40.染色法
+
+判断是否为二分图
+
+<img src="https://keriyar-images.oss-cn-qingdao.aliyuncs.com/img/202311232009017.png" alt="image-20231123200926965" style="zoom:50%;" />
+
+```cpp
+#include<bits/stdc++.h>
+using namespace std;
+
+const int N=100010,M=2*N;
+int h[N],e[M],ne[M],idx;
+int n,m;
+int color[N];
+
+void add(int a,int b)
+{
+	e[idx]=b,ne[idx]=h[a],h[a]=idx++;
+}
+
+bool dfs(int u,int c)
+{
+	color[u]=c;//得到当前点是否被染色
+	for(int i=h[u];i!=-1;i=ne[i])
+	{
+		int j=e[i];
+		if(!color[j])//如果未被染色 
+		{
+			if(!dfs(j,3-c))//接下来的未被染色成功 
+			{
+				return false;
+			}
+		}
+		else if(color[j]==c)//颜色相同 
+		{
+			return false;
+		}
+	}
+	return true;//染色成功
+}
+int main()
+{
+	cin>>n>>m;
+	memset(h,-1,sizeof h);
+	
+	while(m--)
+	{
+		int a,b;
+		cin>>a>>b;
+		add(a,b);
+		add(b,a);//创建无向图
+	}
+	bool flag=true;
+	for(int i=1;i<=n;i++)
+	{
+		if(!color[i])
+		{
+			if(!dfs(i,1))
+			{
+				flag=false;
+				break;
+			}
+			
+		}
+	}
+	
+	if(flag)
+	{
+		cout<<"Yes";
+	}
+	else
+	{
+		cout<<"No";
+	}
+	return 0;
+	
+	
+}
+
+```
+
+
+
+### 41.匈牙利算法
+
+[算法学习笔记(5)：匈牙利算法 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/96229700)
+
+匈牙利算法主要用于解决一些与**二分图匹配**有关的问题：求二分图的**最大匹配数**和**最小点覆盖数**。
+
+(1)最大匹配数：
+
+二分图的最大匹配数。
+
+> 二分图的匹配：给定一个二分图 G，在 G的一个子图 M 中，M 的边集 {E}中的任意两条边都不依附于同一个顶点，则称 M 是一个匹配。
+>
+> 二分图的最大匹配：所有匹配中包含边数最多的一组匹配被称为二分图的最大匹配，其边数即为最大匹配数。
+
+<img src="https://keriyar-images.oss-cn-qingdao.aliyuncs.com/img/202311232030136.png" alt="image-20231123203030923" style="zoom:50%;" />
+
+例题：
+
+<img src="https://keriyar-images.oss-cn-qingdao.aliyuncs.com/img/202311232033186.png" alt="image-20231123203316127" style="zoom:50%;" />
+
+```cpp
+ #include<bits/stdc++.h>
+using namespace std;
+
+const int N=100100;
+int n1,n2,m;
+int h[N],e[N],ne[N],idx;
+bool st[N];
+int match[N];
+
+void add(int a,int b)
+{
+	e[idx]=b,ne[idx]=h[a],h[a]=idx++;
+}
+
+bool find(int x)
+{
+	for(int i=h[x];i!=-1;i=ne[i])
+	{
+		int j=e[i];
+		if(!st[j])//这个女生没有被访问 
+		{
+			st[j]=true;
+			if(match[j]==0 || find(match[j]))
+			//如果此时这个女生没有被匹配过
+			//或者是这个女生被别的男生匹配过了，但是之前这个女生之前被匹配过的这个男生可以找到下架可以找到下家 
+			{
+				match[j]=x;//将这个女生的匹配更新成这个男生
+				return true; 
+			}
+		}
+	}
+	return false;
+}
+int main()
+{
+	cin>>n1>>n2>>m;
+	memset(h,-1,sizeof h);
+	
+	for(int i=0;i<m;i++)
+	{
+		int a,b;
+		cin>>a>>b;
+		add(a,b);
+		
+	}
+	int res=0;//能成功匹配的数量 
+	for(int i=1;i<=n1;i++)
+	{
+		memset(st,false ,sizeof st);
+		//将所有的女生初始化为false,因为不知道这个男生有多少个女生。 
+		if(find(i))//看看能否匹配成功，这个i代表的是男生 
+		{
+			res++;
+		}
+	}
+	cout<<res;
+}
+ 
+```
+
+### 42.质数
+
+### 43.约数
+
+### 44.欧拉函数
+
+### 45.快速幂
+
+[快速幂算法 超详细教程-CSDN博客](https://blog.csdn.net/m0_52072919/article/details/116400820)
+
+C++ math库中的pow函数：
+
+```cpp
+double pow( double base, double exp );
+//返回值：x不能为负数且y为小数，或者x为0且y小于等于0，返回幂指数的结果。返回类型：double型，int，float会给与警告！
+```
+
+普通求幂指数：
+
+```cpp
+/**
+ * 普通的求幂函数
+ * @param base 底数
+ * @param power  指数
+ * @return  求幂结果的最后3位数表示的整数
+ */
+long long normalPower(long long base,long long power){
+    long long result=1;
+    for(int i=1;i<=power;i++){
+        result=result*base;
+    }
+    return result%1000;
+}
+ 
+```
+
+---
+
+**快速幂：**
+
+![img](https://keriyar-images.oss-cn-qingdao.aliyuncs.com/img/202311241414502.png)
+
+取模的运算法则：
+
+>1. (a + b) % p = (a % p + b % p) % p （1）
+>2. (a - b) % p = (a % p - b % p ) % p （2）
+>3. **(a \* b) % p = (a % p \* b % p) % p （3）**
+
+借助这个法则，只需要在循环乘积的每一步都提前进行“取模”运算，而不是等到最后直接对结果“取模”，也能达到同样的效果。
+
+快速幂的思想就是拆分指数:
+
+> 快速幂算法的核心思想就是每一步都把指数分成两半，而相应的底数做平方运算。这样不仅能把非常大的指数给不断变小，所需要执行的循环次数也变小，而最后表示的结果却一直不会变。
+
+$$
+3^{10}=9^5=9^4 \times9^1 =81^2 \times 9^1=6561^1 \times 9^1 
+=6561^0 \times 6561^1 \times 9^1=59049
+$$
+
+```cpp
+long long fastPower(long long base, long long power) {
+    long long result = 1;
+    while (power > 0) {
+        if (power % 2 == 0) {
+            //如果指数为偶数
+            power = power / 2;//把指数缩小为一半
+            base = base * base % 1000;//底数变大成原来的平方
+        } else {
+            //如果指数为奇数
+            power = power - 1;//把指数减去1，使其变成一个偶数
+            result = result * base % 1000;//此时记得要把指数为奇数时分离出来的底数的一次方收集好
+            power = power / 2;//此时指数为偶数，可以继续执行操作
+            base = base * base % 1000;
+        }
+    }
+    return result;
+}
+```
+
+**压榨性能再优化：**
+
+---
+
+```cpp
+long long fastPower(long long base, long long power) {
+    long long result = 1;
+    while (power > 0) {
+        if (power & 1) {//此处等价于if(power%2==1)
+            result = result * base % 1000;
+        }
+        power >>= 1;//此处等价于power=power/2
+        base = (base * base) % 1000;
+    }
+    return result;
+}
+```
+
+---
+
+矩阵的快速幂
+
+```cpp
+#include<bits/stdc++.h>
+using namespace std;
+
+const int Mod = 1e9+7;
+struct Matrix
+{
+    long long c[101][101];
+
+} A, I;
+long long n, k;
+Matrix operator * (const Matrix &x,const Matrix &y)
+{//重载运算符
+    Matrix a;
+    memset(a.c, 0, sizeof a.c);
+    for (int i = 1; i <= n;i++)
+    {
+        for (int j = 1; j <= n;j++)
+        {
+            for (int k = 1; k <= n;k++)
+            {
+                a.c[i][j] += x.c[i][k] * y.c[k][j] % Mod;
+                a.c[i][j] %= Mod;
+            }
+        }
+    }
+    return a;
+}
+
+int main()
+{
+    cin >> n >> k;
+    for (int i = 1; i <= n;i++)
+    {
+        for (int j = 1; j <= n;j++)
+        {
+            cin >> A.c[i][j];
+        }
+    }
+
+    for (int i = 1; i <= n;i++)
+    {
+        I.c[i][i] = 1;
+    }
+
+    while(k>0)
+    {
+        if(k & 1)
+        {
+            I = I * A;
+        }
+        A = A * A;
+        k >>= 1;
+    }
+
+    for (int i = 1; i <= n;i++)
+    {
+        for (int j = 1; j <= n;j++)
+        {
+            cout << I.c[i][j] << " ";
+        }
+        cout << endl;
+    }
+    return 0;
+}
+```
+
+
+
+### 46.扩展欧几里得算法
+
+### 47.中国剩余定理
+
+### 48.高斯消元
+
+### 49.求组合数
+
+### 50.容斥原理
+
+### 51.博弈论
+
+### 52.动态规划
+
+从两个角度考虑：
+
+状态表示$f(i,j)$
+
+​	集合${i,j}$
+
+​	属性$f(i,j)$:最大值、最小值、数量
+
+状态计算
+
+### 53.背包问题
+
+<img src="https://keriyar-images.oss-cn-qingdao.aliyuncs.com/img/202311241518920.png" alt="image-20231124151834813" style="zoom:60%;" />
+
+#### (1)0-1背包
+
+N 件物品和一个容量是 V 的背包。每件物品只能使用一次。第 i 件物品的体积是 vi，价值是 wi。求解将哪些物品装入背包，可使这些物品的总体积不超过背包容量，且总价值最大。
+
+```cpp
+```
+
+#### (2)完全背包
+
+#### (3)多重背包
+
+#### (4)分组背包
+
+### 54.线性DP
+
+### 55.区间DP
+
+### 56.计数DP
+
+### 57.数位DP
+
+### 58.状态压缩DP
+
+### 59.树形DP
+
+### 60.记忆化搜索
+
+### 61.贪心
+
+### 62.区间问题
+
+ST
+
+### 63.Huffman树
+
+### 64.排序不等式
+
+### 65.绝对值不等式
+
+### 66.推公式
